@@ -8,7 +8,8 @@ from django.utils.http import urlencode
 from allauth.socialaccount import providers
 from allauth.socialaccount.providers.base import Provider, ProviderAccount
 
-from .utils import get_email_from_response
+from .utils import get_email_from_response, get_value_from_response
+from .utils import SRegField, OldAXAttribute, AXAttribute
 
 
 class OpenIDAccount(ProviderAccount):
@@ -19,10 +20,10 @@ class OpenIDAccount(ProviderAccount):
         # listed in the openid endpoints setting.
         provider_map = {'yahoo': dict(id='yahoo',
                                       name='Yahoo'),
-                         'hyves': dict(id='hyves',
-                                       name='Hyves'),
-                         'google': dict(id='google',
-                                        name='Google')}
+                        'hyves': dict(id='hyves',
+                                      name='Hyves'),
+                        'google': dict(id='google',
+                                       name='Google')}
         for d, p in provider_map.items():
             if domain.lower().find(d) >= 0:
                 ret = p
@@ -62,7 +63,26 @@ class OpenIDProvider(Provider):
         return response.identity_url
 
     def extract_common_fields(self, response):
-        return dict(email=get_email_from_response(response))
+        first_name = get_value_from_response(response,
+                                             ax_names=[AXAttribute
+                                                       .PERSON_FIRST_NAME,
+                                                       OldAXAttribute
+                                                       .PERSON_FIRST_NAME]) \
+            or ''
+        last_name = get_value_from_response(response,
+                                            ax_names=[AXAttribute
+                                                      .PERSON_LAST_NAME,
+                                                      OldAXAttribute
+                                                      .PERSON_LAST_NAME]) \
+            or ''
+        name = get_value_from_response(response,
+                                       sreg_names=[SRegField.NAME],
+                                       ax_names=[AXAttribute.PERSON_NAME,
+                                                 OldAXAttribute.PERSON_NAME]) \
+            or ''
+        return dict(email=get_email_from_response(response),
+                    first_name=first_name,
+                    last_name=last_name, name=name)
 
 
 providers.registry.register(OpenIDProvider)
